--- a/style.css
+++ b/style.css
@@ -15,6 +15,10 @@
          object-fit: contain !important;
        }
 
+       .navbar{
+        background-color:rgba(0, 0, 0, 0);
+       }
+
         body {
             font-family: 'Arial', sans-serif;
             background: linear-gradient(135deg, #01010c 0%, #020215 50%, #2d1b69 100%);
