--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@
         }
 
         header {
-            background: rgba(0, 0, 0, 0);
+            background-color: rgba(0, 0, 0, 0);
             backdrop-filter: blur(5px);
             position: fixed;
             width: 100%;
