--- a/style.css
+++ b/style.css
@@ -391,7 +391,7 @@
                 right: -100vw;
                 width: 60vw;
                 height: 100vh;
-                background: #222;
+                background:rgba(0, 0, 0, 0);
                 flex-direction: column;
                 align-items: flex-start;
                 padding: 4rem 2rem;
