--- a/style.css
+++ b/style.css
@@ -326,7 +326,7 @@
         }
 
         footer {
-            background: rgba(0, 0, 0, 0.419);
+            background-color: rgba(0, 0, 0, 0.419);
             text-align: center;
             padding: 2rem;
             margin-top: 4rem;
