--- a/style.css
+++ b/style.css
@@ -56,7 +56,8 @@
         }
 
         header {
-            background-color: rgba(73, 73, 73, 0.06);
+            background: transparent;
+            color:white;
             backdrop-filter: blur(1px);
             position: fixed;
             width: 100%;
